@@ -4,6 +4,7 @@ Version 0.7.0
 -------------
 	Improvements:
 	* Make parameter 'acls' of method 'create' optional
+	* Add static method 'dispatch'
 	* Drop PHP-5 support (Issue #14)
 	* Fix segmentation fault found in PHP 7.3
 
